Add Title For ChangePassword Page

--- a/ClothingApp/ClothingApp/Views/ChangePassword.xaml
+++ b/ClothingApp/ClothingApp/Views/ChangePassword.xaml
@@ -2,7 +2,11 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:components="clr-namespace:ClothingApp.CustomComponent"
-             x:Class="ClothingApp.Views.ChangePassword">
+             x:Class="ClothingApp.Views.ChangePassword"
+             Shell.BackgroundColor="#F77951">
+    <Shell.TitleView>
+        <Label Text="Thay đổi mật khẩu" FontSize="20" TextColor="White" FontAttributes="Bold" HorizontalTextAlignment="Center"  VerticalTextAlignment="Center"/>
+    </Shell.TitleView>
     <ContentPage.Content>
         <Grid Margin="20">
             <Grid.RowDefinitions>
