--- a/ClothingApp/ClothingApp/Views/Cart.xaml
+++ b/ClothingApp/ClothingApp/Views/Cart.xaml
@@ -7,7 +7,7 @@
         <Label Text="Giỏ hàng" FontSize="20" TextColor="White" FontAttributes="Bold" HorizontalTextAlignment="Center"  VerticalTextAlignment="Center"/>
     </Shell.TitleView>
     <ContentPage.Content>
-        <Grid Margin="0, 10">
+        <Grid Margin="0, 0, 0, 10">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
                 <RowDefinition Height="Auto" />
