--- a/ClothingApp/ClothingApp/Views/User.xaml
+++ b/ClothingApp/ClothingApp/Views/User.xaml
@@ -7,12 +7,14 @@
             <Label Text="Thông tin người dùng" FontSize="20" TextColor="White" FontAttributes="Bold" HorizontalTextAlignment="Center"  HorizontalOptions="Center" VerticalTextAlignment="Center"/>
     </Shell.TitleView>
     <ContentPage.Content>
-        <Grid Margin="0, 20">
+        <ScrollView>
+            
+        <Grid Margin="0,10" >
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
-                <RowDefinition Height="*" />
+                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
             <StackLayout HorizontalOptions="Center" Spacing="10">
                 <Frame Padding="0" CornerRadius="100" HorizontalOptions="Center">
@@ -56,12 +58,12 @@
                 </Frame>
             </Grid>
             <StackLayout Grid.Row="2" Margin="10, 0">
-                <Label Text="Personal Information" FontSize="20" TextColor="Black" FontAttributes="Bold" Margin="0,0,0,10" />
+                <Label Text="Personal Information" FontSize="20" TextColor="Black" FontAttributes="Bold"/>
                 <Frame BorderColor="#F4F4F6" HasShadow="False" CornerRadius="10">
                     <Grid ColumnSpacing="30" RowSpacing="20">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="auto" />
-                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="auto" />
                         </Grid.ColumnDefinitions>
                         <Label Text="Tên:" FontSize="16" />
                         <Label Text="Phạm Quốc Ấn" Grid.Column="1" FontSize="16" HorizontalTextAlignment="End" FontAttributes="Bold" TextColor="Black" />
@@ -94,5 +96,6 @@
                 <Button Text="Đăng xuất" x:Name="Logout" Clicked="Logout_Clicked" BackgroundColor="#ED5E68" WidthRequest="150" CornerRadius="20" TextColor="White" />
             </StackLayout>
         </Grid>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
