--- a/ClothingApp/ClothingApp/Views/Register.xaml
+++ b/ClothingApp/ClothingApp/Views/Register.xaml
@@ -23,7 +23,7 @@
                     <components:RoundedEntry Placeholder="Nhập lại mật khẩu" FontSize="16" HeightRequest="50" IsPassword="True" />
                 </StackLayout>
                 <Frame Padding="0" HasShadow="False" CornerRadius="20" Margin="0, 10, 0, 0">
-                    <Button Text="Đăng ký" BackgroundColor="#F77951" TextColor="White" />
+                    <Button Text="Đăng ký" BackgroundColor="#F77951" x:Name="Register_btn" TextColor="White" Clicked="Register_btn_Clicked" />
                 </Frame>
                 <Label HorizontalOptions="Center" Margin="0, 10, 0, 0">
                     <Label.FormattedText>
