--- a/ClothingApp/ClothingApp/Views/Login.xaml
+++ b/ClothingApp/ClothingApp/Views/Login.xaml
@@ -17,14 +17,14 @@
                 <Image Source="logo.png" />
             </StackLayout>
             <StackLayout Grid.Row="1" Padding="30, 0">
-                <StackLayout Spacing="10">
+                <!--<StackLayout Spacing="10">
                     <StackLayout>
                         <components:RoundedEntry x:Name="username" Placeholder="Tên đăng nhập" FontSize="16" HeightRequest="50" />
                     </StackLayout>
                     <StackLayout>
                         <components:RoundedEntry x:Name="password" Placeholder="Mật khẩu" FontSize="16" HeightRequest="50" IsPassword="True" />
                     </StackLayout>
-                </StackLayout>
+                </StackLayout>-->
                 <Frame Padding="0" HasShadow="False" CornerRadius="20" Margin="0, 10, 0, 0">
                     <Button Text="Đăng nhập" BackgroundColor="#F77951" TextColor="White" Clicked="Button_Clicked" />
                 </Frame>
