--- a/ClothingApp/ClothingApp/Views/Register.xaml
+++ b/ClothingApp/ClothingApp/Views/Register.xaml
@@ -18,9 +18,9 @@
             </StackLayout>
             <StackLayout Grid.Row="1" Padding="30, 0">
                 <StackLayout Spacing="10">
-                    <components:RoundedEntry Placeholder="Tên đăng nhập" FontSize="16" HeightRequest="50" />
-                    <components:RoundedEntry Placeholder="Mật khẩu" FontSize="16" HeightRequest="50" IsPassword="True" />
-                    <components:RoundedEntry Placeholder="Nhập lại mật khẩu" FontSize="16" HeightRequest="50" IsPassword="True" />
+                    <components:RoundedEntry Placeholder="Tên đăng nhập" FontSize="16" HeightRequest="50" x:Name="username" />
+                    <components:RoundedEntry Placeholder="Mật khẩu" FontSize="16" HeightRequest="50" IsPassword="True" x:Name="password" />
+                    <components:RoundedEntry Placeholder="Nhập lại mật khẩu" FontSize="16" HeightRequest="50" IsPassword="True" x:Name="rePassword" />
                 </StackLayout>
                 <Frame Padding="0" HasShadow="False" CornerRadius="20" Margin="0, 10, 0, 0">
                     <Button Text="Đăng ký" BackgroundColor="#F77951" x:Name="Register_btn" TextColor="White" Clicked="Register_btn_Clicked" />
