--- a/ClothingApp/ClothingApp/Views/EditUser.xaml
+++ b/ClothingApp/ClothingApp/Views/EditUser.xaml
@@ -5,7 +5,17 @@
              xmlns:components="clr-namespace:ClothingApp.CustomComponent"
              Shell.BackgroundColor="#F77951">
     <Shell.TitleView>
-        <Label Text="Thay đổi thông tin" FontSize="20" TextColor="White" FontAttributes="Bold" HorizontalTextAlignment="Center"  VerticalTextAlignment="Center" />
+        <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand">
+            <Image Source="arrow_left.png">
+                <Image.GestureRecognizers>
+                    <TapGestureRecognizer
+                Tapped="TapGestureRecognizer_Tapped"
+                NumberOfTapsRequired="1" />
+                </Image.GestureRecognizers>
+            </Image>
+
+            <Label Text="Thay đổi thông tin" FontSize="20" TextColor="White" FontAttributes="Bold" HorizontalTextAlignment="Center" HorizontalOptions="CenterAndExpand" Margin="0, 0, 40, 0"  VerticalTextAlignment="Center" x:Name="titlePage"/>
+        </StackLayout>
     </Shell.TitleView>
     <ContentPage.Content>
         <Grid Margin="20">
@@ -16,19 +26,19 @@
             <StackLayout Spacing="20">
                 <StackLayout>
                     <Label Text="Tên" FontSize="16" FontAttributes="Bold" TextColor="Black" />
-                    <components:RoundedEntry Placeholder="Nhập tên" Text="Phạm Quốc Ấn" />
+                    <components:RoundedEntry Placeholder="Nhập tên" x:Name="fullName" />
                 </StackLayout>
                 <StackLayout>
                     <Label Text="Email" FontSize="16" FontAttributes="Bold" TextColor="Black" />
-                    <components:RoundedEntry Placeholder="Nhập email" Text="phaman410602@gmail.com" Keyboard="Email" />
+                    <components:RoundedEntry Placeholder="Nhập email" x:Name="email" Keyboard="Email" />
                 </StackLayout>
                 <StackLayout>
                     <Label Text="Số điện thoại" FontSize="16" FontAttributes="Bold" TextColor="Black" />
-                    <components:RoundedEntry Placeholder="Nhập số điện thoại" Text="0779581863" Keyboard="Numeric" />
+                    <components:RoundedEntry Placeholder="Nhập số điện thoại" x:Name="phoneNumber" Keyboard="Numeric" />
                 </StackLayout>
                 <StackLayout>
                     <Label Text="Địa chỉ nhận hàng" FontSize="16" FontAttributes="Bold" TextColor="Black" />
-                    <components:RoundedEntry Placeholder="Nhập địa chỉ" Text="Nghĩa Phương, Tư Nghĩa, Quảng Ngãi" />  
+                    <components:RoundedEntry Placeholder="Nhập địa chỉ" x:Name="address" />  
                 </StackLayout>
             </StackLayout>
             <StackLayout Grid.Row="1" VerticalOptions="End" Orientation="Horizontal" HorizontalOptions="Center">
