Add change password page

--- a/ClothingApp/ClothingApp/Views/ChangePassword.xaml
+++ b/ClothingApp/ClothingApp/Views/ChangePassword.xaml
@@ -5,7 +5,17 @@
              x:Class="ClothingApp.Views.ChangePassword"
              Shell.BackgroundColor="#F77951">
     <Shell.TitleView>
-        <Label Text="Thay đổi mật khẩu" FontSize="20" TextColor="White" FontAttributes="Bold" HorizontalTextAlignment="Center"  VerticalTextAlignment="Center"/>
+        <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand">
+            <Image Source="arrow_left.png">
+                <Image.GestureRecognizers>
+                    <TapGestureRecognizer
+                Tapped="TapGestureRecognizer_Tapped"
+                NumberOfTapsRequired="1" />
+                </Image.GestureRecognizers>
+            </Image>
+
+            <Label Text="Thay đổi mật khẩu" FontSize="20" TextColor="White" FontAttributes="Bold" HorizontalTextAlignment="Center" HorizontalOptions="CenterAndExpand" Margin="0, 0, 40, 0"  VerticalTextAlignment="Center" x:Name="titlePage"/>
+        </StackLayout>
     </Shell.TitleView>
     <ContentPage.Content>
         <Grid Margin="20">
@@ -16,15 +26,15 @@
             <StackLayout Spacing="20">
                 <StackLayout>
                     <Label Text="Mật khẩu hiện tại" FontSize="16" FontAttributes="Bold" TextColor="Black" />
-                    <components:RoundedEntry Placeholder="Nhập mật khẩu hiện tại" IsPassword="True" />
+                    <components:RoundedEntry Placeholder="Nhập mật khẩu hiện tại" x:Name="password" IsPassword="True" />
                 </StackLayout>
                 <StackLayout>
                     <Label Text="Mật khẩu mới" FontSize="16" FontAttributes="Bold" TextColor="Black" />
-                    <components:RoundedEntry Placeholder="Nhập mật khẩu mới" IsPassword="True" />
+                    <components:RoundedEntry Placeholder="Nhập mật khẩu mới" IsPassword="True" x:Name="newPassword" />
                 </StackLayout>
                 <StackLayout>
                     <Label Text="Nhập lại mật khẩu mới" FontSize="16" FontAttributes="Bold" TextColor="Black" />
-                    <components:RoundedEntry Placeholder="Nhập lại mật khẩu mới" IsPassword="True" />
+                    <components:RoundedEntry Placeholder="Nhập lại mật khẩu mới" IsPassword="True" x:Name="reNewPassword" />
                 </StackLayout>
             </StackLayout>
             <StackLayout Grid.Row="1" VerticalOptions="End" Orientation="Horizontal" HorizontalOptions="Center">
